# ServerClient

./: .gitignore  CMakeLists.txt
include/: sockets.hpp
include/common/: common.hpp  log.hpp  packet.hpp  serialize.hpp  sockets.hpp  timer.hpp
include/server/: server.hpp
src/: sockets.cpp
src/client/: client.cpp
src/common/: log.cpp  packet.cpp  serialize.cpp  sockets.cpp  timer.cpp
src/server/: server.cpp
